Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16212

kfilnd net and lnd tunables wrong

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      The kfilnd net and lnd tunables were not getting set properly in
      many cases. Tunables not explcitly set were not set to the correct
      default values.

      Fixed logic in kfilnd_tunables_setup() and jt_add_ni().

      Improved error messages in kfilnd_startup() and
      kfilnd_tunables_setup().

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: